--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,7 +10,7 @@ qa-brain.planx-pla.net @tyro-ops
 qa-anvil.planx-pla.net @tyro-ops
 qa-dcf.planx-pla.net @atharvar28
 qa-dcfdemo.planx-pla.net @atharvar28
-qa-dcp.planx-pla.net @tyro-ops
+qa-dcp.planx-pla.net @atharvar28
 
 qa-aids.planx-pla.net @atharvar28
 qa-covid19.planx-pla.net @atharvar28
