--- a/qa-midrc.planx-pla.net/manifest.json
+++ b/qa-midrc.planx-pla.net/manifest.json
@@ -8,7 +8,7 @@
     "arborist": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/arborist:2022.08",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
     "dashboard": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-statics:2022.08",
-    "dicom-viewer": "quay.io/cdis/ohif-viewer:master",
+    "dicom-viewer": "quay.io/cdis/ohif-viewer:master-rebase",
     "dicom-server": "quay.io/cdis/gen3-orthanc:master",
     "fence": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/fence:2022.08",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
