jenkins-blood Add metadata-delete-expired-objects image

--- a/jenkins-blood.planx-pla.net/manifest.json
+++ b/jenkins-blood.planx-pla.net/manifest.json
@@ -31,7 +31,8 @@
     "hatchery": "quay.io/cdis/hatchery:master",
     "metadata": "quay.io/cdis/metadata-service:master",
     "dashboard": "quay.io/cdis/gen3-statics:master",
-    "requestor": "quay.io/cdis/requestor:master"
+    "requestor": "quay.io/cdis/requestor:master",
+    "metadata-delete-expired-objects": "quay.io/cdis/metadata-delete-expired-objects:master",
   },
   "sower": [
     {
