--- a/jenkins-blood.planx-pla.net/manifest.json
+++ b/jenkins-blood.planx-pla.net/manifest.json
@@ -32,7 +32,7 @@
     "metadata": "quay.io/cdis/metadata-service:master",
     "dashboard": "quay.io/cdis/gen3-statics:master",
     "requestor": "quay.io/cdis/requestor:master",
-    "metadata-delete-expired-objects": "quay.io/cdis/metadata-delete-expired-objects:master",
+    "metadata-delete-expired-objects": "quay.io/cdis/metadata-delete-expired-objects:master"
   },
   "sower": [
     {
