--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -24,7 +24,8 @@
     "dashboard": "quay.io/cdis/gen3-statics:2022.08",
     "metadata": "quay.io/cdis/metadata-service:2022.08",
     "tube": "quay.io/cdis/tube:2022.08",
-    "thor": "quay.io/cdis/thor:master"
+    "thor": "quay.io/cdis/thor:master",
+    "metadata-delete-expired-objects": "quay.io/cdis/metadata-delete-expired-objects:master"
   },
   "arborist": {
     "deployment_version": "2"
