updating the CODEOWNERs file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,35 +1,27 @@
-qa-acct.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-qa-bloodpac.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-qa-canine.planx-pla.net @trevars @haraprasadj @atharvar28 @tyro-ops
-qa.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-qaplanetv2.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
+qa-acct.planx-pla.net @trevars @uc-cdis/planx-qa
+qa-bloodpac.planx-pla.net @trevars @uc-cdis/planx-qa
+qa-canine.planx-pla.net @trevars @uc-cdis/planx-qa
+qa.planx-pla.net @uc-cdis/planx-qa
+qaplanetv2.planx-pla.net @uc-cdis/planx-qa
 
-qa-mickey.planx-pla.net @tyro-ops
-qa-brain.planx-pla.net @tyro-ops
+qa-mickey.planx-pla.net @nmetokishlubsky
+qa-anvil.planx-pla.net @radhrreddy
+qa-dcp.planx-pla.net @uc-cdis/planx-qa
 
-qa-anvil.planx-pla.net @tyro-ops
-qa-dcf.planx-pla.net @atharvar28
-qa-dcfdemo.planx-pla.net @atharvar28
-qa-dcp.planx-pla.net @atharvar28
+qa-covid19.planx-pla.net @hughestr @atharvar28
+qa-ibd.planx-pla.net @hughestr @atharvar28
+qa-jcoin.planx-pla.net @hughestr @atharvar28
+qa-kidsfirst.planx-pla.net @radhrreddy @atharvar28
+qa-niaid.planx-pla.net @hughestr @atharvar28
 
-qa-aids.planx-pla.net @atharvar28
-qa-covid19.planx-pla.net @atharvar28
-qa-flu.planx-pla.net @atharvar28
-qa-ibd.planx-pla.net @atharvar28
-qa-jcoin.planx-pla.net @atharvar28
-qa-kidsfirst.planx-pla.net @atharvar28
-qa-microbiome.planx-pla.net @atharvar28
-qa-nde.planx-pla.net @atharvar28
-qa-niaid.planx-pla.net @atharvar28
-qa-tb.planx-pla.net @atharvar28
+qa-heal.planx-pla.net @hughestr @haraprasadj
+qa-brh.planx-pla.net @briennal @haraprasadj
+qa-midrc.planx-pla.net @frankliuao @cgmeyer
 
-qa-heal.planx-pla.net @haraprasadj
-qa-brh.planx-pla.net @haraprasadj
-
-jenkins-blood.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-jenkins-brain.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-jenkins-dcp.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-jenkins-genomel.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-jenkins-niaid.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-jenkins-new.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
-jenkins-perf.planx-pla.net @haraprasadj @atharvar28 @tyro-ops
+jenkins-blood.planx-pla.net @uc-cdis/planx-qa
+jenkins-brain.planx-pla.net @uc-cdis/planx-qa
+jenkins-dcp.planx-pla.net @uc-cdis/planx-qa
+jenkins-genomel.planx-pla.net @uc-cdis/planx-qa
+jenkins-niaid.planx-pla.net @uc-cdis/planx-qa
+jenkins-new.planx-pla.net @uc-cdis/planx-qa
+jenkins-perf.planx-pla.net @uc-cdis/planx-qa
