--- a/qa-canine.planx-pla.net/manifest.json
+++ b/qa-canine.planx-pla.net/manifest.json
@@ -9,7 +9,7 @@
   "versions": {
     "arborist": "quay.io/cdis/arborist:2020.03",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2020.03",
+    "fence": "quay.io/cdis/fence:test_binam_service_account_removal_test",
     "indexd": "quay.io/cdis/indexd:2020.03",
     "peregrine": "quay.io/cdis/peregrine:2020.03",
     "pidgin": "quay.io/cdis/pidgin:2020.03",
