--- a/qa-ibd.planx-pla.net/manifest.json
+++ b/qa-ibd.planx-pla.net/manifest.json
@@ -174,7 +174,9 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa-ibd/user.yaml",
     "maintenance_mode": "off",
     "lb_type": "internal",
-    "public_datasets": true
+    "public_datasets": true,
+    "karpenter": true,
+    "argocd": true
   },
   "canary": {
     "default": 0
