--- a/qa-heal.planx-pla.net/manifest.json
+++ b/qa-heal.planx-pla.net/manifest.json
@@ -1,7 +1,6 @@
 {
   "notes": [
-    "This is the dev environment manifest",
-    "That's all I have to say"
+    "This is the dev environment manifest"
   ],
   "jenkins": {
     "autodeploy": "yes"
