--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -54,7 +54,8 @@
     "logs_bucket": "logs-devplanetv1-gen3",
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "netpolicy": "off-for-jenkins",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "karpenter": true
   },
   "canary": {
     "default": 0
