--- a/jenkins-new-2.planx-pla.net/manifest.json
+++ b/jenkins-new-2.planx-pla.net/manifest.json
@@ -13,7 +13,7 @@
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
     "awshelper": "quay.io/cdis/awshelper:master",
     "fence": "quay.io/cdis/fence:master",
-    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
+    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
     "indexd": "quay.io/cdis/indexd:master",
     "ws-storage": "quay.io/cdis/ws-storage:master",
     "peregrine": "quay.io/cdis/peregrine:master",
