--- a/qa-anvil.planx-pla.net/manifest.json
+++ b/qa-anvil.planx-pla.net/manifest.json
@@ -12,7 +12,7 @@
     "arborist": "quay.io/cdis/arborist:2021.06",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
     "fence": "quay.io/cdis/fence:2021.06",
-    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
+    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
     "guppy": "quay.io/cdis/guppy:2021.06",
     "hatchery": "quay.io/cdis/hatchery:2021.06",
     "indexd": "quay.io/cdis/indexd:2021.06",
