add back sheepdog and peregrine

--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -15,6 +15,7 @@
     "jenkins": "quay.io/cdis/jenkins:master",
     "jenkins-worker": "quay.io/cdis/gen3-qa-worker:master",
     "jenkins-ci-worker": "quay.io/cdis/gen3-ci-worker:master",
+    "peregrine": "quay.io/cdis/peregrine:2023.02",
     "portal": "quay.io/cdis/data-portal:2023.02",
     "revproxy": "quay.io/cdis/nginx:2023.02",
     "sheepdog": "quay.io/cdis/sheepdog:2022.08",
@@ -27,6 +28,7 @@
     "environment": "qaplanetv1",
     "hostname": "qa.planx-pla.net",
     "revproxy_arn": "arn:aws:acm:us-east-1:707767160287:certificate/c676c81c-9546-4e9a-9a72-725dd3912bc8",
+    "dictionary_url": "https://s3.amazonaws.com/dictionary-artifacts/datadictionary/develop/schema.json",
     "portal_app": "gitops",
     "sync_from_dbgap": "False",
     "kube_bucket": "kube-qaplanetv1-gen3",
