test(sprint07): Reverted auto formatting

--- a/qa-mickey.planx-pla.net/manifest.json
+++ b/qa-mickey.planx-pla.net/manifest.json
@@ -1,5 +1,8 @@
 {
-  "notes": ["This is the dev environment manifest", "That's all I have to say"],
+  "notes": [
+    "This is the dev environment manifest",
+    "That's all I have to say"
+  ],
   "jenkins": {
     "autodeploy": "yes"
   },
