add property to IBD etl and point explorerConfig to use it

--- a/qa-ibd.planx-pla.net/etlMapping.yaml
+++ b/qa-ibd.planx-pla.net/etlMapping.yaml
@@ -5,6 +5,7 @@ mappings:
     root: participant
     props:
       - name: submitter_id
+      - name: consortium_id
       - name: project_id
     parent_props:
       - path: centers[country]
