--- a/jenkins-brain.planx-pla.net/manifest.json
+++ b/jenkins-brain.planx-pla.net/manifest.json
@@ -33,7 +33,9 @@
     "hatchery": "quay.io/cdis/hatchery:master",
     "metadata": "quay.io/cdis/metadata-service:master",
     "dashboard": "quay.io/cdis/gen3-statics:master",
-    "requestor": "quay.io/cdis/requestor:master"
+    "requestor": "quay.io/cdis/requestor:master",
+    "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:0.2.0",
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:0.1.1"
   },
   "arborist": {
     "deployment_version": "2"
