--- a/qa-aids.planx-pla.net/manifest.json
+++ b/qa-aids.planx-pla.net/manifest.json
@@ -9,7 +9,7 @@
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
     "fence": "quay.io/cdis/fence:2020.08",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "guppy": "quay.io/cdis/guppy:2020.08",
+    "guppy": "quay.io/cdis/guppy:feat_es7",
     "indexd": "quay.io/cdis/indexd:2020.08",
     "manifestservice": "quay.io/cdis/manifestservice:2020.08",
     "peregrine": "quay.io/cdis/peregrine:2020.08",
@@ -19,7 +19,7 @@
     "sheepdog": "quay.io/cdis/sheepdog:2020.08",
     "sower": "quay.io/cdis/sower:2020.08",
     "spark": "quay.io/cdis/gen3-spark:2020.08",
-    "tube": "quay.io/cdis/tube:2020.08",
+    "tube": "quay.io/cdis/tube:feat_new-es-7",
     "dashboard": "quay.io/cdis/gen3-statics:2020.08"
   },
   "global": {
@@ -39,6 +39,7 @@
     "workspace_url": "https://qa-nde.planx-pla.net/lw-workspace",
     "manifest_service_url": "https://qa-nde.planx-pla.net/manifests",
     "wts_url": "https://qa-nde.planx-pla.net/wts/oauth2/",
+    "es7": true,
     "origins_allow_credentials": [
       "https://qa-nde.planx-pla.net",
       "https://qa-tb.planx-pla.net",
