--- a/qa-tb.planx-pla.net/manifest.json
+++ b/qa-tb.planx-pla.net/manifest.json
@@ -8,7 +8,7 @@
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
     "fence": "quay.io/cdis/fence:2020.08",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "guppy": "quay.io/cdis/guppy:2020.08",
+    "guppy": "quay.io/cdis/guppy:feat_es7",
     "indexd": "quay.io/cdis/indexd:2020.08",
     "manifestservice": "quay.io/cdis/manifestservice:2020.08",
     "peregrine": "quay.io/cdis/peregrine:2020.08",
@@ -18,7 +18,7 @@
     "sheepdog": "quay.io/cdis/sheepdog:2020.08",
     "sower": "quay.io/cdis/sower:2020.08",
     "spark": "quay.io/cdis/gen3-spark:2020.08",
-    "tube": "quay.io/cdis/tube:2020.08",
+    "tube": "quay.io/cdis/tube:feat_new-es-7",
     "dashboard": "quay.io/cdis/gen3-statics:2020.08"
   },
   "global": {
@@ -46,7 +46,8 @@
     "netpolicy": "off",
     "cookie_domain": "planx-pla.net",
     "des_namespace": "qa-nde",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "arborist": {
     "deployment_version": "2"
