--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -38,7 +38,8 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "netpolicy": "off-for-jenkins",
     "lb_type": "internal",
-    "karpenter": true
+    "karpenter": true,
+    "es7": true
   },
   "canary": {
     "default": 0
