--- a/qaplanetv2.planx-pla.net/manifest.json
+++ b/qaplanetv2.planx-pla.net/manifest.json
@@ -18,7 +18,7 @@
     "spark": "quay.io/cdis/gen3-spark:2021.01",
     "manifestservice": "quay.io/cdis/manifestservice:2021.01",
     "wts": "quay.io/cdis/workspace-token-service:2021.01",
-    "tube": "quay.io/cdis/tube:master"
+    "tube": "quay.io/cdis/tube:feat_new-es-7"
   },
   "arranger": {
     "project_id": "dev",
@@ -45,7 +45,8 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "netpolicy": "on",
     "lb_type": "internal",
-    "argocd": "true"
+    "argocd": "true",
+    "es7": true
   },
   "canary": {
     "default": 0
