--- a/workspace.planx-pla.net/manifest.json
+++ b/workspace.planx-pla.net/manifest.json
@@ -18,7 +18,8 @@
     "logs_bucket": "logs-qaplanetv2-gen3",
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "netpolicy": "on",
-    "lb_type": "public"
+    "lb_type": "public",
+    "es7": true
   },
   "scaling": {
     "dashboard": {
