--- a/qaplanetv2.planx-pla.net/manifest.json
+++ b/qaplanetv2.planx-pla.net/manifest.json
@@ -18,7 +18,8 @@
     "spark": "quay.io/cdis/gen3-spark:2021.01",
     "manifestservice": "quay.io/cdis/manifestservice:2021.01",
     "wts": "quay.io/cdis/workspace-token-service:2021.01",
-    "tube": "quay.io/cdis/tube:feat_new-es-7"
+    "tube": "quay.io/cdis/tube:feat_new-es-7",
+    "guppy": "quay.io/cdis/guppy:feat_es7"
   },
   "arranger": {
     "project_id": "dev",
